0029670: Draw Harness - vtrihedron xaxis zaxis is wrong

Fixed gp_Ax2 initialization by two vectors.
Fixed -labels arguments number check.